--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Wesley W. Q.
-author: Wesley Wei Qian
-description: Computer Science Student & AI Enthusiast
+title: Sharath Chandra Guntuku
+author: Sharath Chandra Guntuku
+description: PhD Student in Computer Science
 ---
