--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: default
 title: Sharath Chandra Guntuku
 author: Sharath Chandra Guntuku
-description: PhD Student in Computer Science
+description: Researcher in Computational Social Science and Multimedia Computing
 ---
